fix: all inputs and textareas now have 16px fonts; fix: register form first and last names fields separate; update: pagination button hover improved; fix: pagination panel shifts.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -108,7 +108,7 @@
   }
 
   .pagination-btn {
-    @apply xs:size-8 xs:p-2 xs:text-base flex size-6 cursor-pointer items-center justify-center rounded-lg p-1.5 text-sm transition-all duration-200 ease-out hover:bg-gray-100 active:scale-85 sm:size-10 sm:rounded-xl sm:p-2.5;
+    @apply xs:size-8 xs:p-2 xs:text-base flex size-6 cursor-pointer items-center justify-center rounded-lg p-1.5 text-sm transition-all duration-200 ease-out hover:bg-gray-50 active:scale-85 sm:size-10 sm:rounded-xl sm:p-2.5;
   }
 
   .pagination-btn-number {
